@@ -2,7 +2,7 @@
 stdout "this test will break if user configuration breaks in.";
 stdout "so it is temporary :)";
 autocmd "" "" "";
-_debug_commands=1;
+_debug_commands='c';
 alias "aalib_fix" ""; # FIXME : autocmd "" "" "" should suffice, but it does not!
 echo "ciao";
 next;
