@@ -1,6 +1,6 @@
 stdout "this test checks recording capabilities.";
 stdout "it is unfinished, as recording is only supported for interactive usage.";
-#_debug_commands=1;
+#_debug_commands='c';
 #start_recording;
 #stdout "you are recording, aren't you?";
 #stop_recording;
